--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,13 @@
-@import 'app/styles/index.scss';
+/*@import 'app/styles/index.scss';*/
+
+@mixin font-regular() {
+  font-family: 'JosefinSans-Regular', sans-serif;
+}
+
+@mixin font-size-16() {
+  font-size: 16px;
+  line-height: 20px;
+}
 
 *,
 *:before,
