--- a/src/app/components/header/index.scss
+++ b/src/app/components/header/index.scss
@@ -1,29 +1,16 @@
-/*@import 'app/styles/index.scss';*/
-$color-background: cornflowerblue;
-$minScreenS: 320;
-$minScreenSM: 480;
-$minScreenM: 768;
-$minScreenX: 1024;
-$minScreenL: 1440;
-
-@mixin screen-320 {
-  @media screen and (min-width: $minScreenS + px) and (max-width: $minScreenSM - 1 + px) {
-    @content;
-  }
-}
-
-@mixin font-size-10() {
-  font-size: 10px;
-  line-height: 16px;
-}
+@import 'styles/index';
 
 .header {
   background: $color-background;
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 
   @include screen-320 {
-    display: flex;
+    justify-content: center;
+  }
 
-    @include font-size-10;
+  @include min-screen-480 {
+    justify-content: flex-start;
   }
 }
