--- a/src/app/components/header/menu/index.scss
+++ b/src/app/components/header/menu/index.scss
@@ -1,4 +1,46 @@
+@import 'styles/index';
+
+@mixin padding-margin-320() {
+  padding: 3px 30px;
+  margin: 0 auto;
+  @include font-size-14;
+}
+
 .menu {
+  @include font-size-16;
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+  transition: 0.3s;
+
+  @include screen-320 {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  @include min-screen-480 {
+    justify-content: space-around;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: white;
+    padding: 15px;
+
+    @include screen-320 {
+      @include padding-margin-320;
+
+    }
+
+    &:hover {
+      background-color: darkseagreen;
+      cursor: pointer;
+      padding: 15px;
+      transition: background-color 1s ease;
+
+      @include screen-320 {
+        @include padding-margin-320;
+      }
+    }
+  }
 }
