--- a/src/app/components/overview/index.scss
+++ b/src/app/components/overview/index.scss
@@ -1,7 +1,14 @@
+@import 'styles/index';
+
 .overview {
   display: flex;
   color: grey;
-  font-size: 1.2rem;
-  line-height: 4;
-  padding-left: 3%;
+  padding-left: 20px;
+  @include font-size-18;
+
+
+  @include screen-320 {
+    @include font-size-16;
+    padding: 10px 0 10px 20px;
+  }
 }
