--- a/src/app/components/search/index.scss
+++ b/src/app/components/search/index.scss
@@ -1,8 +1,14 @@
+@import 'styles/index';
+
 .search {
   display: flex;
   background-color: lightskyblue;
-  font-size: 1.2rem;
-  line-height: 4.5;
-  padding-left: 3%;
-  margin-bottom: 2%;
+  padding-left: 20px;
+  margin-bottom: 0;
+  @include font-size-18;
+
+  @include screen-320 {
+    @include font-size-16;
+    padding: 10px 0 10px 20px;
+  }
 }
