--- a/src/app/components/card/index.scss
+++ b/src/app/components/card/index.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     width: 212px;
     height: 180px;
+    box-shadow: 0px 0px 4px 2px rgba(0,0,0,0.2);
 
     @include min-screen-480 {
         width: 180px;
@@ -19,7 +20,7 @@
         width: 152px;
     }
 
-    @include min-screen-1024 {
+    @include min-screen-1080 {
         width: 148px;
     }
 
@@ -37,6 +38,8 @@
         height: 72px;
         border-radius: 50%;
         margin: 24px auto 12px auto;
+        overflow: hidden;
+        background-color: #FFFFFF;
 
         @include screen-320 {
             width: 88px;
