--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -22,14 +22,8 @@ body {
 
 #root {
   width: 100vw;
-  height: 100vh;
-  display: flex;
-}
-
-.app {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  justify-content: space-between;
 }
-
