--- a/src/app/components/employee/index.scss
+++ b/src/app/components/employee/index.scss
@@ -1,6 +1,6 @@
 @import 'styles/index';
 
-.card {
+.employee {
     border: 1px solid #868686;
     margin: 16px 4px;;
     background-color: #DCDCDC;
