--- a/src/app/components/master-page/index.scss
+++ b/src/app/components/master-page/index.scss
@@ -1,3 +1,35 @@
+@import 'styles/index';
 
-.page {
+.header {
+    background: $color-background;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+
+    &__button {
+        margin: 8px 15px;
+        padding: 0;
+        border: none;
+        color: inherit;
+        background-color: transparent;
+        cursor: pointer;
+
+        &:active {
+            transform: translateY(1px);
+            filter: saturate(150%);
+        }
+
+        &:hover {
+            background-color: $color-background;
+        }
+    }
+}
+
+.page__footer {
+    background: $color-background;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    color: #ffffff;
 }
