--- a/src/app/components/preloader/index.scss
+++ b/src/app/components/preloader/index.scss
@@ -4,6 +4,7 @@
     height: 100%;
     align-items: center;
     justify-content: center;
+    padding-bottom: 450px;
 
     &:after {
         content: "";
