--- a/src/app/pages/employees/index.scss
+++ b/src/app/pages/employees/index.scss
@@ -1,4 +1,10 @@
 .employees-page {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+  /*  align-items: center;
+    justify-content: center;*/
+ /*   flex:1;*/
+
 }
+
 
