add_active_employee

--- a/src/app/pages/employee-overview/list/index.scss
+++ b/src/app/pages/employee-overview/list/index.scss
@@ -1,8 +1,8 @@
-@import 'styles/index';
+@import '../../../../styles/index';
 
-.all-employees-list {
+.employees-list {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
 
     @include screen-320 {
