--- a/src/app/components/employee/index.scss
+++ b/src/app/components/employee/index.scss
@@ -30,6 +30,15 @@
         height: 100%;
         text-align: center;
         text-decoration: none;
+
+        &-active {
+            display: block;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            text-decoration: none;
+            background-color: darkseagreen;
+        }
       }
 
     &__icon {
