--- a/src/app/components/master-page/index.scss
+++ b/src/app/components/master-page/index.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    min-height: 7vh;
 
     &__button {
         margin: 8px 15px;
@@ -25,11 +26,27 @@
     }
 }
 
-.page__footer {
-    background: $color-background;
+.page {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    color: #ffffff;
+    min-height: 93vh;
+    flex-direction: column;
+
+    &__content {
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        flex: 1 0 auto;
+        justify-content: center;
+    }
+
+    &__footer {
+        background: $color-background;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 7vh;
+        color: #ffffff;
+        /*justify-self: flex-end;*/
+        flex: 0 0 auto;
+    }
 }
