--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -25,5 +25,5 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+/*  justify-content: space-between;*/
 }
