--- a/src/app/pages/employees/index.scss
+++ b/src/app/pages/employees/index.scss
@@ -1,10 +1,9 @@
-.employees-page {
+.all-employees-page {
     display: flex;
     flex-direction: column;
-  /*  align-items: center;
-    justify-content: center;*/
- /*   flex:1;*/
-
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
 }
 
 
